tweaks before starting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,57 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="header">
+      <!--header logo-->
+      <!--header links-->
+    </div>
 
+    <div class="hero">
+      <div class="splash_box1">
+      <!--title-->
+      <!--subtext-->
+      <!--sign up button-->
+      </div>
+      <div class="image_container">
+        <!--img-->
+      </div>
+    </div>
+
+    <div class="rand_info">
+      <div class="title"></div>
+      <div class="single_item">
+        <div class="rand_box"></div>
+        <div class="rand_text"></div>
+      </div>
+      <div class="single_item">
+        <div class="rand_box"></div>
+        <div class="rand_text"></div>
+      </div>
+      <div class="single_item">
+        <div class="rand_box"></div>
+        <div class="rand_text"></div>
+      </div>
+      <div class="single_item">
+        <div class="rand_box"></div>
+        <div class="rand_text"></div>
+      </div>
+    </div>
+
+    <div class="quote">
+      <div class="quote_text"></div>
+      <div class="quote_name"></div>
+    </div>
+
+    <div class="call_to_action">
+      <div class="cta_container">
+        <div class="cta_box">
+          <div class="cta_title"></div>
+          <div class="cta_sub"></div>
+        </div>
+        <button class="cta_button">Sign Up</button>
+      </div>
+    </div>
+
+    <div class="footer">Copyright © The Odin Project 2023</div>
   </body>
 </html>
