added index content and started work on style

--- a/index.html
+++ b/index.html
@@ -8,57 +8,61 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
-      <!--header logo-->
-      <!--header links-->
+    <div class="header darkbg">
+      <div class="header_logo">Header Logo</div>
+      <ul class="header_links">
+        <li><a href="index.html">header link one</a></li>
+        <li><a href="index.html">header link two</a></li>
+        <li><a href="index.html">header link three</a></li>
+      </ul>
     </div>
 
-    <div class="hero">
+    <div class="hero darkbg">
       <div class="splash_box1">
-      <!--title-->
-      <!--subtext-->
-      <!--sign up button-->
+        <div class="title">This website is awesome</div>
+        <div class="subtitle">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
+        <button>Sign up</button>
       </div>
       <div class="image_container">
-        <!--img-->
+        this is a placeholder for an image
       </div>
     </div>
 
     <div class="rand_info">
-      <div class="title"></div>
+      <div class="title">Some random information</div>
       <div class="single_item">
         <div class="rand_box"></div>
-        <div class="rand_text"></div>
+        <div class="rand_text">this is some subtext under an illustration or image</div>
       </div>
       <div class="single_item">
         <div class="rand_box"></div>
-        <div class="rand_text"></div>
+        <div class="rand_text">this is some subtext under an illustration or image</div>
       </div>
       <div class="single_item">
         <div class="rand_box"></div>
-        <div class="rand_text"></div>
+        <div class="rand_text">this is some subtext under an illustration or image</div>
       </div>
       <div class="single_item">
         <div class="rand_box"></div>
-        <div class="rand_text"></div>
+        <div class="rand_text">this is some subtext under an illustration or image</div>
       </div>
     </div>
 
     <div class="quote">
-      <div class="quote_text"></div>
-      <div class="quote_name"></div>
+      <div class="quote_text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read this. Who knows? All I know is that it looks nice.</div>
+      <div class="quote_name">-Dave, from accounting</div>
     </div>
 
     <div class="call_to_action">
       <div class="cta_container">
         <div class="cta_box">
-          <div class="cta_title"></div>
-          <div class="cta_sub"></div>
+          <div class="cta_title">Call to action! It's time!</div>
+          <div class="cta_sub">Sign up for our product by clicking that button right over there!</div>
         </div>
         <button class="cta_button">Sign Up</button>
       </div>
     </div>
 
-    <div class="footer">Copyright © The Odin Project 2023</div>
+    <div class="footer darkbg">Copyright © The Odin Project 2023</div>
   </body>
 </html>
