finished header, hero and randinfo

--- a/index.html
+++ b/index.html
@@ -19,32 +19,36 @@
 
     <div class="hero darkbg">
       <div class="splash_box1">
-        <div class="title">This website is awesome</div>
-        <div class="subtitle">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
-        <button>Sign up</button>
-      </div>
-      <div class="image_container">
-        this is a placeholder for an image
+        <div class="hero_box">
+          <div class="title hero_content">This website is awesome</div>
+          <div class="subtitle hero_content">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
+          <button class="hero_content">Sign up</button>
+        </div>
+        <div class="image_container">
+          this is a placeholder for an image
+        </div>
       </div>
     </div>
 
     <div class="rand_info">
-      <div class="title">Some random information</div>
-      <div class="single_item">
-        <div class="rand_box"></div>
-        <div class="rand_text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="single_item">
-        <div class="rand_box"></div>
-        <div class="rand_text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="single_item">
-        <div class="rand_box"></div>
-        <div class="rand_text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="single_item">
-        <div class="rand_box"></div>
-        <div class="rand_text">this is some subtext under an illustration or image</div>
+      <div class="information_header">Some random information</div>
+      <div class="rand_container">
+        <div class="single_item">
+          <div class="rand_box"></div>
+          <div class="rand_text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="single_item">
+          <div class="rand_box"></div>
+          <div class="rand_text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="single_item">
+          <div class="rand_box"></div>
+          <div class="rand_text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="single_item">
+          <div class="rand_box"></div>
+          <div class="rand_text">this is some subtext under an illustration or image</div>
+        </div>
       </div>
     </div>
 
