All sections complete

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="call_to_action">
       <div class="cta_container">
         <div class="cta_box">
-          <div class="cta_title">Call to action! It's time!</div>
+          <h3>Call to action! It's time!</h3>
           <div class="cta_sub">Sign up for our product by clicking that button right over there!</div>
         </div>
         <button class="cta_button">Sign Up</button>
